# Coding-challange-engine

./: CMakeLists.txt  CodeLoader.cpp  CodeLoader.h  FileLoader.cpp  FileLoader.h  LevelHandler.h  Levels.h  README.md  constants.h  main.cpp  solution.cpp
